tests/string_literal_invalid_escape.stderr
tests/string_literal_invalid_escape.sl:2:12: error: SL1009: invalid string escape sequence
