tests/string_literal_invalid_escape.sl
// Verifies string literal invalid escape.
const x = "\q"
